--- a/server/.env.example
+++ b/server/.env.example
@@ -26,6 +26,9 @@ FRONTEND_URL=http://localhost:5173
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 
+# Gemini AI API Key (Get from https://makersuite.google.com/app/apikey)
+GEMINI_API_KEY=your-gemini-api-key-here
+
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=600000
 RATE_LIMIT_MAX_ATTEMPTS=5
