feat: Implement subscription management with Stripe integration
- Added Subscription page for users to manage their plans and view usage.
- Integrated Stripe for payment processing, including checkout sessions and webhooks.
- Updated user model to include subscription fields and generation limits.
- Created subscription controller to handle subscription logic and Stripe interactions.
- Added routes for subscription management, including checkout, status retrieval, and cancellation.
- Modified Auth component to remove role selection and provide default role information.
- Updated Index page to navigate users based on their roles.
- Implemented generation limits for users based on their subscription type.
- Added environment variables for Stripe configuration in the server.

--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "nodemailer": "^7.0.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "rate-limiter-flexible": "^8.1.0"
+    "rate-limiter-flexible": "^8.1.0",
+    "stripe": "^19.2.1"
   }
 }
