--- a/server/.env.example
+++ b/server/.env.example
@@ -29,6 +29,22 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 # Gemini AI API Key (Get from https://makersuite.google.com/app/apikey)
 GEMINI_API_KEY=your-gemini-api-key-here
 
+# Stripe Payment Integration
+# Get these from https://dashboard.stripe.com/
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+
+# Stripe Price IDs (Create products in Stripe Dashboard)
+# 1. Create a product for "Pro Learner" with $20/month recurring
+# 2. Create a product for "Recruiter" with $50/month recurring
+# 3. Create a product for "Addon" with $10 one-time payment
+STRIPE_PRICE_PRO_LEARNER=price_your_pro_learner_price_id
+STRIPE_PRICE_RECRUITER=price_your_recruiter_price_id
+STRIPE_PRICE_ADDON=price_your_addon_price_id
+
+# Client URL for Stripe redirects
+CLIENT_URL=http://localhost:5173
+
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=600000
 RATE_LIMIT_MAX_ATTEMPTS=5
